add map icon for maplink

--- a/layouts/shortcodes/maplink.html
+++ b/layouts/shortcodes/maplink.html
@@ -2,5 +2,5 @@
 
 
 <a href="https://www.google.com/maps/search/?api=1&query={{ $destination }}" target="_blank" rel="noopener noreffer">
-{{$destination}}
+    <i class="fas fa-map-marked-alt"></i> {{$destination}}
 </a>
