--- a/layouts/shortcodes/resizeimg.html
+++ b/layouts/shortcodes/resizeimg.html
@@ -2,6 +2,8 @@
 {{- $options = cond .IsNamedParams (.Get "alt") (.Get 1) | .Page.RenderString | dict "Alt" | merge $options -}}
 {{- $caption := cond .IsNamedParams (.Get "caption") (.Get 2) | .Page.RenderString -}}
 {{- $options = dict "Caption" $caption | merge $options -}}
+{{- $options = dict "Watermark" $.Site.Params.watermark | merge $options -}}
+
 
 {{- if .IsNamedParams -}}
     {{- $options = dict "Title" (.Get "title") | merge $options -}}
@@ -27,3 +29,5 @@
 {{- else -}}
     {{- partial "plugin/imagesize.html" $options -}}
 {{- end -}}
+
+
